correção dos links

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@ title: E-Storage
         <div class="hidden-xs hidden-sm col-md-4 col-lg-4">
             {% for post in site.posts limit:1 %}
             <div class="thumbnail">
-                <a href="/beta{{ BASE_PATH }}{{ post.url }}">
+                <a href="{{ BASE_PATH }}{{ post.url }}">
                     <div class="thumbPost" style="background-image: url('{{ post.featimage }}'); background-position: center;"></div>
                 </a>
                 <div class="caption">
                     <p class="miniData">{% include themes/estorage/date.md %}</p>
                     <h3>{{ post.title }}</h3>
-                    <p><a href="/beta{{ BASE_PATH }}{{ post.url }}" class="btn btn-laranjaVazado" role="button">Leia</a></p>
+                    <p><a href="{{ BASE_PATH }}{{ post.url }}" class="btn btn-laranjaVazado" role="button">Leia</a></p>
                 </div>
             </div>
             {% endfor %}
