--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title: E-Storage
                 <img src="images/intranet_352px.png" alt="...">
                 <div class="caption">
                     <h3>Potencialize os resultados da sua equipe com nossas soluções de busca para intranet</h3>
-                    <p><a href="#" class="btn btn-laranjaVazado" role="button">Entenda</a> <a href="#" class="btn btn-laranja" role="button">Fale Conosco</a></p>
+                    <p><a href="/solucoes/intranet.html" class="btn btn-laranjaVazado" role="button">Entenda</a> <a href="#" class="btn btn-laranja" role="button">Fale Conosco</a></p>
                 </div>
             </div>
         </div>
