reduced size of images on the slide on the index.html; added a todo.md file to list the todos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: E-Storage
 <div class="swiper-container">
         <div class="swiper-wrapper">
             <!--Primeiro Slide-->
-            <div class="swiper-slide" style="background-image:url(images/plex3_325px.png);"> 
+            <div class="swiper-slide" style="background-image:url(images/plex3_325px.png); background-repeat:no-repeat; background-color: #000;"> 
                 <div class="swiper-slide-content caixaMagica">
                     <h1>Conheça o Google Search Appliance</h1>
                     <p>A caixa mágica do Google</p>
