update idangerous swiper version from 2.3 to 2.5.1 and added arrows to the swiper on the small, medium and large layouts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@ title: E-Storage
 
 <!-- ========================SWIPER======================== -->
 <!-- ======================================================== -->
+
 <div class="swiper-container">
+    <a class="arrow-left hidden-xs" href="#"></a> 
+    <a class="arrow-right hidden-xs" href="#"></a>
         <div class="swiper-wrapper">
             <!--Primeiro Slide-->
             <div class="swiper-slide" style="background-image:url(images/plex3_325px.png); background-repeat:no-repeat; background-color: #000;"> 
