--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: E-Storage
             <div class="swiper-slide" style="background-image:url(images/plex3_325px.png); background-repeat:no-repeat; background-color: #000;"> 
                 <div class="swiper-slide-content caixaMagica">
                     <h1>Conheça o Google Search Appliance</h1>
-                    <p>A caixa mágica do Google</p>
+                    <p class="hidden-xs">A caixa mágica do Google</p>
 
                     <p>
                         <a class="btn btn-lg btn-branco" href="#">Saiba mais</a>
