--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: E-Storage
             </div>
             
             <!--Segundo Slide-->
-            <div class="swiper-slide" style="background-image:url(images/tribunal_325px.png);"> 
+            <div class="swiper-slide" style="background-image:url(images/tribunal_325px.png);">
                 <div class="swiper-slide-content judiciario">
                     <iframe class="hidden-xs" style="float:left;" src="http://www.youtube.com/embed/HLhl4vV4tEg" frameborder="0" allowfullscreen></iframe>
 
@@ -38,9 +38,10 @@ title: E-Storage
             </div>
             
             <!--Terceiro Slide-->
+            <!--
             <div class="swiper-slide" style="background-image:url(images/brasil2014_325px.png);"> 
                 <div class="swiper-slide-content brasil2014">
-                    <h1>Em 2014, teremos muitos estrangeiros no Brasil</h1>
+                    <h1 class="hidden-xs">Em 2014, teremos muitos estrangeiros no Brasil</h1>
                     <p>Entenda a importância de uma busca que traduz para 22 idiomas</p>
 
                     <p>
@@ -49,6 +50,7 @@ title: E-Storage
                     </p>
                 </div>
             </div>
+            -->
         </div>
     </div>
 <!-- ========================SWIPER======================== -->
