--- a/solucoes/judiciario.html
+++ b/solucoes/judiciario.html
@@ -131,10 +131,10 @@ tagline: Acesso a qualquer informação de forma rápida, intuitiva e a partir d
     </div>
 </div>
 
-##Veja o case do Tribunal de Justiça do Rio Grande do Sul
+<!-- ##Veja o case do Tribunal de Justiça do Rio Grande do Sul
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 (Screencast do TJmobile)
 (link para o TJRS na página de clientes que ainda será elaborada)
 
-→ Veja a lista completa de vantagens na página do GSA
+→ Veja a lista completa de vantagens na página do GSA -->
