updated navigation and updated contact and customer pages

--- a/contato/index.html
+++ b/contato/index.html
@@ -7,31 +7,58 @@ title: Contato
 
 <form action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
-<input type=hidden name="oid" value="00D70000000J0vQ">
-<input type=hidden name="retURL" value="http://e-storageonline.com.br/contato">
+  <div class="row">
 
-<div class="input-group input-group-lg">
-    <span class="input-group-addon">Nome</span>
-    <input  id="first_name" class="form-control" maxlength="40" name="first_name" size="20" type="text" />
-</div>
-<br>
-<div class="input-group input-group-lg">
-    <span class="input-group-addon">Sobrenome</span>
-    <input  id="last_name" class="form-control" maxlength="80" name="last_name" size="20" type="text" />
-</div>
+    <div class="hidden-xs hidden-sm col-md-1 col-lg-1"></div>
 
-<label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
+    <div class="col-sm-8 col-md-4 col-lg-4">
 
-<label for="company">Empresa</label><input  id="company" maxlength="40" name="company" size="20" type="text" /><br>
+      <input type=hidden name="oid" value="00D70000000J0vQ">
+      <input type=hidden name="retURL" value="http://e-storageonline.com.br/contato">
 
-<label for="city">Cidade</label><input  id="city" maxlength="40" name="city" size="20" type="text" /><br>
+      <label for="first_name">Nome</label>
+      <div class="input-group-lg">
+        <input  id="first_name" class="form-control" maxlength="40" name="first_name" size="20" type="text" />
+      </div>
 
-<label for="state">Estado/província</label><input  id="state" maxlength="20" name="state" size="20" type="text" /><br>
+      <label for="last_name">Sobrenome</label>
+      <div class="input-group-lg">
+        <input  id="last_name" class="form-control" maxlength="80" name="last_name" size="20" type="text" />
+      </div>
 
-Como podemos ajuda-lo?:<textarea  id="00N70000002HWjz" name="00N70000002HWjz" rows="5" type="text" wrap="soft"></textarea><br>
+      <label for="email">Email</label>
+      <div class="input-group-lg">
+        <input  id="email" class="form-control" maxlength="80" name="email" size="20" type="text" />
+      </div>
+    </div>
+    <div class="col-sm-8 col-md-4 col-lg-4">
 
-<input type="submit" name="submit">
+      <label for="company">Empresa</label>
+      <div class="input-group-lg">
+        <input  id="company" class="form-control" maxlength="40" name="company" size="20" type="text" />
+      </div>
 
+      <label for="city">Cidade</label>
+      <div class="input-group-lg">
+        <input  id="city" class="form-control" maxlength="40" name="city" size="20" type="text" />
+      </div>
+
+      <label for="state">Estado/província</label>
+      <div class="input-group-lg">
+        <input  id="state" class="form-control" maxlength="20" name="state" size="20" type="text" />
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="hidden-xs hidden-sm col-md-1 col-lg-1"></div>
+    <div class="col-md-8 col-lg-8">
+      <label for="00N70000002HWjz">Como podemos ajuda-lo?:</label>
+      <textarea  id="00N70000002HWjz" class="form-control" name="00N70000002HWjz" rows="5" type="text" wrap="soft"></textarea>
+      <br>
+      <input class="btn btn-laranja" type="submit" name="submit">
+    </div>
+  </div>
 </form>
 
-<div id="map-canvas"/>
+<br class="clear: both;" />
