--- a/produtos/google-site-search.html
+++ b/produtos/google-site-search.html
@@ -5,7 +5,7 @@ tagline: Solução de busca para o seu website hospedada pelo Google
 ---
 
 <br style="clear:both;" /><br style="clear:both;" />
-<img src="/images/produtos-google-site-search-1.jpg" class="center-block" />
+<img src="/images/produtos-google-site-search-3.png" class="center-block" />
 <br style="clear:both;" /><br style="clear:both;" />
 
 <div class="row">
